[tool.poetry]
name = "testwork"
version = "0.1.0"
description = ""
authors = ["Denys <denys.shtoma@knu.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
cloudscraper = "^1.2.71"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
django-scheduler = "^0.10.1"
schedule = "^1.2.2"
undetected-chromedriver = "^3.5.5"
requests-html = "^0.10.0"
websockets = "^14.0"
playwright = "^1.48.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
